# AutoBloomer-SensorModule

./: .gitignore  CMakeLists.txt  README.md  SensorPodController.c
PCB/SensorPod-Board/: SensorPod-Board.kicad_pcb  SensorPod-Board.kicad_prl  SensorPod-Board.kicad_sch  SensorPod-Board.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
hardware/: shift_register.c  shift_register.h
hardware/HIB/CNC/C2D/: ac-panel-meter.c2d  bucket_mount_supports.c2d  bucket_mount_supports_small_only.c2d  bucket_mount_top.c2d  control_box.c2d  cutting_mount.c2d  feed-level-platform.c2d  lcd_mounts.c2d  mounting-panel-bottom.c2d  mounting-panel-sides.c2d  mounting-panel.c2d  scd_cutouts_left_side.c2d  scd_cutouts_lid.c2d  scd_cutouts_right_side.c2d  scd_cutouts_sides.c2d  sensor_box_top.c2d  sonar-mount-bottom.c2d  sonar-mount-top.c2d  sonar_mount_bottom-stage2.c2d  sonar_mount_top-stage1.c2d  v2_base_plate.c2d  v2_front_plate.c2d  v2_front_plate_test.c2d
hardware/HIB/CNC/GCODE/: bucket_mount_supports.nc  bucket_mount_supports_small_only.nc  bucket_mount_top.nc  mounting-panel-bottom.nc  mounting-panel-sides.nc  mounting-panel.nc  scd_cutouts_lid.nc  scd_cutouts_sides.nc  single-mount.nc  sonar-mount-bottom.nc  sonar-mount-top.nc  v2_base_plate_1_16_operations.nc  v2_base_plate_1_8_operations.nc  (+2 more)
hardware/HIB/PCB/: HardwareInterfaceBoard.kicad_prl  HardwareInterfaceBoard.kicad_pro  HardwareInterfaceBoard.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/KiCad/PicoW/: RPi_Pico.kicad_sym
hardware/KiCad/SCD30/: MODULE_SCD30.kicad_mod
hardware/SensorPod/PCB/: SensorPod-Board.kicad_pcb  SensorPod-Board.kicad_pro  SensorPod-Board.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
menu/: altitude_compensation_menu.c  altitude_compensation_menu.h  continuous_measurement_menu.c  continuous_measurement_menu.h  forced_recalibration_menu.c  forced_recalibration_menu.h  main_menu.c  main_menu.h  measurement_interval_menu.c  measurement_interval_menu.h  menu_interface.c  menu_interface.h  temperature_offset_menu.c  temperature_offset_menu.h  user_int_input_menu.h
pico/: CMakeLists.txt  SensorPodController.c  program.sh
pico/src/: main.cpp  sensor_hardware.cpp  sensor_hardware.h
pico/src/board_hardware/: connection_io.cpp  connection_io.h  hib_led_indicator.h  pico_w_onboard_led_indicator.h  shift_register.cpp  shift_register.h  wifi_indicator.h
pico/src/cores/: core_0_executor.cpp  core_0_executor.h  core_1_executor.cpp  core_1_executor.h  sensor_mqtt_client_core_1.c  sensor_mqtt_client_core_1.h  sensor_multicore_utils.c  sensor_multicore_utils.h  sensor_pod_core_0.c  sensor_pod_core_1.c  sensor_pod_core_1.h
pico/src/hardware_platform/dummy/: CMakeLists.txt  sensor_hardware.cpp  sensor_hardware.h
pico/src/hardware_platform/hib/: CMakeLists.txt  sensor_hardware.cpp  sensor_hardware.h
pico/src/hardware_platform/sensor_pod/: sensor_hardware.cpp  sensor_hardware.h
pico/src/messages/: multicore_mailbox.c  multicore_mailbox.h  sensor_pod_messages.c  sensor_pod_messages.h
pico/src/messaging/: core_message_queue.h  mqtt_message.cpp  mqtt_message.h  multicore_mailbox.cpp  multicore_mailbox.h  sensor_control_message.cpp  sensor_control_message.h  sensor_data_message.cpp  sensor_data_message.h  sensor_pod_messages.cpp  sensor_pod_messages.h
pico/src/network/: lwipopts.h  mqtt_controller.cpp  mqtt_controller.h  mqtt_utils.c  mqtt_utils.h  network_controller.cpp  network_controller.h  network_utils.c  network_utils.h
pico/src/pio/: uart_rx.pio
pico/src/sensor/: scd30_sensor.c  scd30_sensor.h  sensor_i2c_interface.c  sensor_i2c_interface.h  sensor_pod.c  sensor_pod.h  stemma_soil_sensor.c  stemma_soil_sensor.h
pico/src/sensor_hardware/sensor_pod/: sensor_hardware.cpp  sensor_hardware.h
pico/src/sensors/: battery_sensor.cpp  battery_sensor.h  dummy_sensor.cpp  dummy_sensor.h  scd30_sensor.cpp  scd30_sensor.h  sensor.cpp  sensor.h  sensor_group.cpp  sensor_group.h  sonar_sensor.cpp  sonar_sensor.h  stemma_soil_sensor.cpp  stemma_soil_sensor.h
pico/src/sensors/hardware_interfaces/: sensor_i2c_interface.cpp  sensor_i2c_interface.h
pico/src/sensors/hardware_interfaces/sensirion/: sensirion_arch_config.h  sensirion_sw_i2c.c  sensirion_sw_i2c_implementation.c
pico/src/sensors/hardware_interfaces/sensirion/bitbang/: scd30.c  sensirion_sw_i2c.c  sensirion_sw_i2c_gpio.h  sensirion_sw_i2c_hal.c  sensirion_sw_i2c_implementation.c
pico/src/sensors/hardware_interfaces/sensirion/common/: sensirion_common.h  sensirion_config.h  sensirion_i2c_hal.h
pico/src/sensors/hardware_interfaces/sensirion/pico_i2c/: sensirion_pico_i2c_hal.c
pico/src/sensors/sensirion/: sensirion_i2c_hal.c
pico/src/sensors/sensor_types/: battery_sensor.cpp  battery_sensor.h  dummy_sensor.cpp  dummy_sensor.h  scd30_sensor.cpp  scd30_sensor.h  sonar_sensor.cpp  sonar_sensor.h  stemma_soil_sensor.cpp  stemma_soil_sensor.h
pico/src/serial_control/: serial_controller.c  serial_controller.cpp  serial_controller.h
pico/src/userdata/: user_data.cpp  user_data.h  userdata.c  userdata.h
pico/src/util/: debug_io.cpp  debug_io.h
pico/src_cpp/: main.cpp
pico/src_cpp/cores/: core_0_executor.cpp  core_1_executor.cpp  core_1_executor.h
pico/src_cpp/messaging/: multicore_mailbox.cpp  multicore_mailbox.h  sensor_pod_messages.cpp  sensor_pod_messages.h
pico/src_cpp/network/: mqtt_controller.cpp  mqtt_controller.h
pico/src_cpp/sensors/: sensor_i2c_interface.cpp  sensor_i2c_interface.h  sensor_pod.cpp  sensor_pod.h  stemma_soil_sensor.cpp  stemma_soil_sensor.h
pico/src_cpp/serial_control/: serial_controller.cpp  serial_controller.h
pico/src_cpp/userdata/: user_data.cpp  user_data.h
pico/src_cpp/util/: debug_io.h
sensor/: scd30_sensor.c  scd30_sensor.h  sensor_i2c_interface.c  sensor_i2c_interface.h  sensor_pod.c  sensor_pod.h  stemma_soil_sensor.c  stemma_soil_sensor.h
src/: SensorPodController.c
src/menu/: continuous_measurement_menu.c  continuous_measurement_menu.h  main_menu.c  main_menu.h  menu_interface.h  user_int_input_menu.c  user_int_input_menu.h
src/sensor/: scd30_sensor.c
(+14 files in other folders)
